--- a/demo/composer-nova.json.dist
+++ b/demo/composer-nova.json.dist
@@ -29,7 +29,7 @@
   "autoload": {
     "psr-4": {
       "App\\": "app/",
-      "ZiffMedia\\Laravel\\EloquentImagery\\": "../src/"
+      "ZiffMedia\\LaravelEloquentImagery\\": "../src/"
     },
     "classmap": [
       "database/seeds",
@@ -46,10 +46,7 @@
   },
   "extra": {
     "laravel": {
-      "dont-discover": [],
-      "providers": [
-        "ZiffMedia\\Laravel\\EloquentImagery\\EloquentImageryProvider"
-      ]
+      "dont-discover": []
     }
   },
   "minimum-stability": "dev",
