--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "laravel-mix": "^5.0",
         "laravel-nova": "^1.0",
         "serialize-javascript": "^4.0.0",
+        "vue": "^2.6.11",
         "vue-template-compiler": "^2.6.11",
         "vuedraggable": "^2.21.0",
         "vuex": "^3.1.3"
